# src/modules/worlds/worlds.validators.ts
@@ -1,0 +1,9 @@
+export {
+  createWorldBodySchema,
+  joinWorldBodySchema,
+  updateWorldBodySchema,
+  worldIdParamsSchema,
+  type CreateWorldBody,
+  type JoinWorldBody,
+  type UpdateWorldBody,
+} from '../../openapi/schemas/world.schemas.js';
